# Recipher

./: .gitmodules  Bandpass_hardware.jucer  Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Makefile
Bandpass_hardware.xcodeproj/: project.pbxproj
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Sculpt.xcodeproj/: project.pbxproj
SculptTest/: main.c
Source/: BandpassFilter.cpp  BandpassFilter.h  Envelope.cpp  Envelope.h  FilterSynth.cpp  FilterSynth.h  LowpassFilter.h  Oscillator.cpp  Oscillator.h  PhaseVocoder.cpp  PhaseVocoder.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
app/: CMakeLists.txt  Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Recipher.jucer  daisy_juce.h
app/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
app/Builds/MacOSX/Recipher.xcodeproj/: project.pbxproj
app/Builds/MacOSX/Recipher.xcodeproj/xcuserdata/timschoen.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
app/Builds/MacOSX/Recipher.xcodeproj/xcuserdata/timschoen.xcuserdatad/xcschemes/: xcschememanagement.plist
app/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
app/Source/: Main.cpp
src/: AudioFile.h  Config.h  Configuration.h  Delay.h  Envelope.cpp  Envelope.h  FilterSynth.cpp  FilterSynth.h  Freeze.h  LFO.h  LowpassFilter.h  Octaver.h  Oscillator.cpp  Oscillator.h  Parameters.h  PhaseVocoder.cpp  PhaseVocoder.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Processor.h  (+4 more)
(+21 files in other folders)
